# spotify-private-api-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api.rs  lib.rs  session.rs
src/api/: folders.rs  mod.rs  session.rs
