[package]
name = "spotify-private-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12" }
tokio = { version = "1.21.1", features = ["full"] }
serde_json = "1.0.86"
serde = "1.0.145"
serde_with = "2.0.1"
rand = "0.8.5"
