[package]
name = "spotify-private-api"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Spotify private api for rust, add/remove/delete folders"
repository = "https://github.com/ofirgall/spotify-private-api-rs/"
keywords = ["spotify"]
categories = ["accessibility"]

[features]
system-tests = []

[dependencies]
reqwest = { version = "0.11.12" }
tokio = { version = "1.21.1", features = ["full"] }
serde_json = "1.0.86"
serde = "1.0.145"
serde_with = "2.0.1"
random-string = "1.0.0"
